# auto_curry

./: Cargo.toml  README.md
examples/: add.rs
src/: lib.rs
tests/: fake_mutable.rs  inside_struct.rs  long_add.rs  mutable.rs  returns_impl_fn.rs
