[package]
name = "auto_curry"
version = "0.1.0"
edition = "2021"
description = "Procedural macro to automatically curry functions"
readme = "README.md"
repository = "https://github.com/whyrgola/auto_curry"
license-file = "LICENSE"

[lib]
proc-macro = true

[dependencies]
itertools = "0.10.5"
proc-macro2 = "1.0.50"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full", "extra-traits"] }
